--- a/config/database.yml
+++ b/config/database.yml
@@ -23,14 +23,14 @@ default: &default
 
 development:
   <<: *default
-  database: auckland_donation_services_development
+  database: donorhub_transformer_development
   host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: auckland_donation_services
+  #username: donorhub_transformer
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: auckland_donation_services_test
+  database: donorhub_transformer_test
   host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -82,5 +82,5 @@ test:
 #
 production:
   <<: *default
-  database: auckland_donation_services_production
+  database: donorhub_transformer_production
   host: localhost
