--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ DOMAIN_NAME=example.com
 ADMIN_NAME=First User
 ADMIN_EMAIL=user@example.com
 ADMIN_PASSWORD=changeme
+ORG_NAME=Church Name
+ORG_CODE=ChNm
