add mailer to member

--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ pickle-email-*.html
 **.swp
 
 # Environment files that may contain sensitive data
-.env
+.env.development
 privatekey.pem
 
 # tilde files are usually backup files from a text editor
