get sync working

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ INTEGRATION_REFRESH_TOKEN_ENCRYPTION_KEY=2549bfe20147badf35622178df0feb85ac1419b
 HEROKU_APP_NAME=donation-core
 HEROKU_API_KEY=abcdef
 DOMAIN_NAME=donationcore.com
+XERO_API_CLIENT_ID=
+XERO_API_CLIENT_SECRET=
