--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,3 +11,6 @@ Style/Documentation:
   Enabled: false
 Rails/EnvironmentVariableAccess:
   AllowReads: true
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*
