update specs to support request

--- a/spec/fixtures/files/api/v1/query.ini
+++ b/spec/fixtures/files/api/v1/query.ini
@@ -4,38 +4,38 @@ RecommendedVersion=3.2.5
 
 [ORGANIZATION]
 RedirectQueryIni=
-Code=CHCHNAME
-Name=Church Name
-Abbreviation=CHCHNAME
-AccountHelpUrl=mailto:org@example.com
-RequestProfileUrl=mailto:org@example.com
-OrgHelpUrl=mailto:org@example.com
-OrgHelpUrlDescription=Click here to report this issue!
-MinimumWebGiftDate=1/1/2014
+Code=60-2994465
+Name=Stark, Legros and Conroy
+Abbreviation=Group
+AccountHelpUrl=http://stroman.io/nicola
+RequestProfileUrl=http://douglas.co/leandro
+OrgHelpUrl=http://quigley.com/charley.wolff
+OrgHelpUrlDescription=Sartorial tattooed 3 wolf moon freegan keytar yolo shoreditch goth.
+MinimumWebGiftDate=01/01/1990
 MinPidLength=
-DefaultCurrencyCode=NZD
+DefaultCurrencyCode=ARS
 GLAccountCategoriesToConsolidate=
 
 [PROFILES]
-Url=http://www.example.com/api/v1/designation_profiles
+Url=http://tester.example.com/api/v1/designation_profiles
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$
 
 [DESIGNATIONS]
-Url=http://www.example.com/api/v1/designation_accounts
+Url=http://tester.example.com/api/v1/designation_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$
 
 [DONATIONS]
-Url=http://www.example.com/api/v1/donations
+Url=http://tester.example.com/api/v1/donations
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&date_from=$DATEFROM$&date_to=$DATETO$
 
 [ADDRESSES]
-Url=http://www.example.com/api/v1/donor_accounts
+Url=http://tester.example.com/api/v1/donor_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&date_from=$DATEFROM$
 
 [ADDRESSES_BY_PERSONIDS]
-Url=http://www.example.com/api/v1/donor_accounts
+Url=http://tester.example.com/api/v1/donor_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&donor_account_ids=$PERSONIDS$
 
 [ACCOUNT_BALANCE]
-Url=http://www.example.com/api/v1/balances
+Url=http://tester.example.com/api/v1/balances
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$
