--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,3 @@
-inherit_from: .rubocop_todo.yml
 require:
   - rubocop-rails
   - rubocop-rspec
@@ -23,3 +22,6 @@ Style/ClassAndModuleChildren:
   EnforcedStyle: compact
   Exclude:
     - config/application
+Metrics/AbcSize:
+  Exclude:
+    - db/**/*
