--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ SENDGRID_USERNAME=Your_Username
 SENDGRID_PASSWORD=Your_Password
 DOMAIN_NAME=example.com
 SECRET_KEY_BASE=abcdef
+XERO_API_CLIENT_ID=
+XERO_API_CLIENT_SECRET=
