--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ db/*.sqlite3
 /log/*
 /tmp/*
 
+.env.local
+.env.*.local
+
 # add /config/database.yml if it contains passwords
 # /config/database.yml
 
