start work on user front end

--- a/spec/fixtures/files/api/v1/query.ini
+++ b/spec/fixtures/files/api/v1/query.ini
@@ -4,7 +4,7 @@ RecommendedVersion=3.2.5
 
 [ORGANIZATION]
 RedirectQueryIni=
-Code=60-2994465
+Code=tester
 Name=Stark, Legros and Conroy
 Abbreviation=Group
 AccountHelpUrl=http://stroman.io/nicola
@@ -17,25 +17,25 @@ DefaultCurrencyCode=ARS
 GLAccountCategoriesToConsolidate=
 
 [PROFILES]
-Url=http://www.example.com/tester/api/v1/designation_profiles
+Url=http://www.example.com/organizations/tester/api/v1/designation_profiles
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$
 
 [DESIGNATIONS]
-Url=http://www.example.com/tester/api/v1/designation_accounts
+Url=http://www.example.com/organizations/tester/api/v1/designation_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$
 
 [DONATIONS]
-Url=http://www.example.com/tester/api/v1/donations
+Url=http://www.example.com/organizations/tester/api/v1/donations
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&date_from=$DATEFROM$&date_to=$DATETO$
 
 [ADDRESSES]
-Url=http://www.example.com/tester/api/v1/donor_accounts
+Url=http://www.example.com/organizations/tester/api/v1/donor_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&date_from=$DATEFROM$
 
 [ADDRESSES_BY_PERSONIDS]
-Url=http://www.example.com/tester/api/v1/donor_accounts
+Url=http://www.example.com/organizations/tester/api/v1/donor_accounts
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$&donor_account_ids=$PERSONIDS$
 
 [ACCOUNT_BALANCE]
-Url=http://www.example.com/tester/api/v1/balances
+Url=http://www.example.com/organizations/tester/api/v1/balances
 Post=user_email=$ACCOUNT$&user_token=$PASSWORD$&designation_profile_id=$PROFILE$
