--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
   "name": "donorhub_transformer",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@activeadmin/activeadmin": "^2.9.0",
+    "@popperjs/core": "^2.10.1",
+    "@rails/activestorage": "^6.1.4-1",
+    "@rails/ujs": "^6.1.4-1",
+    "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.1.1",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.1.1"
+  }
 }
