--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "private": true,
   "dependencies": {
     "@activeadmin/activeadmin": "^2.9.0",
+    "@babel/polyfill": "^7.12.1",
     "@popperjs/core": "^2.10.1",
     "@rails/activestorage": "^6.1.4-1",
     "@rails/ujs": "^6.1.4-1",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "^5.1.1",
+    "chart.js": "^2.9.4",
+    "feather-icons": "^4.28.0",
+    "flatpickr": "^4.6.9",
+    "jsvectormap": "^1.3.3",
+    "simplebar": "^5.3.5",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
